1. 增加租户业务脚本，使开发平台基于SaaS模式来进行开发

--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,15 @@
             <version>${weixin-java.version}</version>
         </dependency>
 
+        <!-- 数据库迁移 -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
