--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,19 @@
 spring:
   application:
-    name: youlai-boot
+    name: youqusoft-visionflow
   profiles:
     active: dev
   config:
     import: classpath:codegen.yml
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    baseline-version: 1
+    encoding: UTF-8
+    validate-on-migrate: true
 
 # 在 banner.txt 中显示项目版本，使用 @project.version@ 从 pom.xml 获取
 project:
   version: @project.version@
+
