1. 升级最新版本pom依赖

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.6</version> <!-- lookup parent from repository -->
+        <version>3.5.5</version> <!-- lookup parent from repository -->
         <relativePath/>
     </parent>
 
@@ -20,20 +20,21 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
 
-        <hutool.version>5.8.27</hutool.version>
+        <hutool.version>5.8.34</hutool.version>
 
         <mysql-connector-j.version>9.1.0</mysql-connector-j.version>
-        <druid.version>1.2.23</druid.version>
+        <druid.version>1.2.24</druid.version>
         <mybatis-plus.version>3.5.5</mybatis-plus.version>
+        <dynamic-datasource.version>4.3.1</dynamic-datasource.version>
 
         <knife4j.version>4.5.0</knife4j.version>
 
-        <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <mapstruct.version>1.6.3</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 
-        <xxl-job.version>2.4.1</xxl-job.version>
+        <xxl-job.version>3.2.0</xxl-job.version>
 
-        <easyexcel.version>3.2.1</easyexcel.version>
+        <fastexcel.version>1.3.0</fastexcel.version>
 
         <!-- 对象存储 -->
         <minio.version>8.5.10</minio.version>
@@ -42,7 +43,7 @@
         <aliyun-sdk-oss.version>3.16.3</aliyun-sdk-oss.version>
 
         <!-- redisson 分布式锁 -->
-        <redisson.version>3.30.0</redisson.version>
+        <redisson.version>3.51.0</redisson.version>
 
         <!-- 自动代码生成 -->
         <mybatis-plus-generator.version>3.5.6</mybatis-plus-generator.version>
@@ -52,11 +53,12 @@
         <ip2region.version>2.7.0</ip2region.version>
 
         <!-- 阿里云短信 -->
-        <aliyun.java.sdk.core.version>4.6.4</aliyun.java.sdk.core.version>
+        <aliyun.java.sdk.core.version>4.7.6</aliyun.java.sdk.core.version>
         <aliyun.java.sdk.dysmsapi.version>2.2.1</aliyun.java.sdk.dysmsapi.version>
 
         <!-- 微信 jdk -->
-        <weixin-java.version>4.5.5.B</weixin-java.version>
+        <weixin-java.version>4.7.7.B</weixin-java.version>
+        <caffeine.version>2.9.3</caffeine.version>
     </properties>
 
     <dependencies>
@@ -113,6 +115,21 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>${mysql-connector-j.version}</version>
@@ -131,12 +148,25 @@
             <version>${mybatis-plus.version}</version>
         </dependency>
 
+        <!-- knife4j 接口文档 -->
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
             <version>${knife4j.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springdoc</groupId>
+                    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.9</version>
         </dependency>
 
+        <!-- MapStruct 对象映射 -->
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
@@ -149,21 +179,18 @@
             <version>${mapstruct.version}</version>
         </dependency>
 
+        <!-- xxl-job 定时任务 -->
         <dependency>
             <groupId>com.xuxueli</groupId>
             <artifactId>xxl-job-core</artifactId>
             <version>${xxl-job.version}</version>
         </dependency>
 
+        <!-- Excel 工具（EasyExcel-PLus ）  -->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>easyexcel</artifactId>
-            <version>${easyexcel.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
+            <groupId>cn.idev.excel</groupId>
+            <artifactId>fastexcel</artifactId>
+            <version>${fastexcel.version}</version>
         </dependency>
 
         <!-- MinIO 对象存储 -->
@@ -173,6 +200,7 @@
             <version>${minio.version}</version>
         </dependency>
 
+        <!-- 阿里云 OSS 对象存储 -->
         <dependency>
             <groupId>com.aliyun.oss</groupId>
             <artifactId>aliyun-sdk-oss</artifactId>
@@ -186,32 +214,25 @@
             <version>${redisson.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-websocket</artifactId>
-        </dependency>
-
+        <!-- mybatis-plus 代码生成器 -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
             <version>${mybatis-plus-generator.version}</version>
         </dependency>
 
+        <!-- velocity 模板引擎(代码生成) -->
         <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity-engine-core</artifactId>
             <version>${velocity.version}</version>
         </dependency>
 
+        <!-- IP 转省市区 -->
         <dependency>
             <groupId>org.lionsoul</groupId>
             <artifactId>ip2region</artifactId>
             <version>${ip2region.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
 
         <dependency>
@@ -232,6 +253,12 @@
             <version>${weixin-java.version}</version>
         </dependency>
 
+        <!-- 本地缓存 -->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>${caffeine.version}</version>
+        </dependency>
         <!-- 数据库迁移 -->
         <dependency>
             <groupId>org.flywaydb</groupId>
