--- a/pom.xml
+++ b/pom.xml
@@ -259,7 +259,7 @@
             <artifactId>caffeine</artifactId>
             <version>${caffeine.version}</version>
         </dependency>
-        <!-- 数据库迁移 -->
+        <!-- 数据库迁移
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
@@ -267,7 +267,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-mysql</artifactId>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <build>
