--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -5,15 +5,15 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://www.youlai.tech:3306/youlai_boot?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&autoReconnect=true&allowMultiQueries=true
-    username: youlai
-    password: 123456
+    url: jdbc:mysql://rm-wz93fqzael6icd8oz2o.mysql.rds.aliyuncs.com:3306/visionflow?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&autoReconnect=true&allowMultiQueries=true
+    username: youqusoft_visionflow
+    password: Youqusoft@2025
   data:
     redis:
       database: 11
-      host: www.youlai.tech
-      port: 6379
-      password: 123456
+      host: 127.0.0.1
+      port: 63791
+      password: Jack@2025
       timeout: 10s
       lettuce:
         pool:
@@ -97,7 +97,7 @@ security:
 # 文件存储配置
 oss:
   # OSS 类型 (目前支持aliyun、minio)
-  type: minio
+  type: local
   # MinIO 对象存储服务
   minio:
     # 服务Endpoint
@@ -123,7 +123,7 @@ oss:
   # 本地存储
   local:
     # 文件存储路径 请注意下，mac用户请使用 /Users/your-username/your-path/，否则会有权限问题，windows用户请使用 D:/your-path/
-    storage-path: /Users/theo/home/
+    storage-path: /home/youqusoft/visionflow/imgs
 # 短信配置
 sms:
   # 阿里云短信
